--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "pinia": "^2.1.6",
+    "vant": "^4.6.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -33,8 +35,12 @@
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "npm-run-all": "^4.1.5",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.0.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^12.0.0",
     "typescript": "~5.1.6",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.8"
   },
